--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
         <assertj-core.version>3.22.0</assertj-core.version>
         <org-mockito.version>4.5.1</org-mockito.version>
         <picocli.version>4.6.3</picocli.version>
+
+
+        <!-- <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>17</java.version> -->
     </properties>
 
     <build>
@@ -33,8 +38,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
                     <configuration>
-                        <source>11</source>
-                        <target>11</target>
+                        <source>21</source>
+                        <target>21</target>
                     </configuration>
                 </plugin>
             </plugins>
