--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -15,16 +15,8 @@ COPY --from=jdk-builder /workspace/protocol-mapper/target/keycloak-custom-protoc
 
 RUN /opt/keycloak/bin/kc.sh build
 
-FROM registry.access.redhat.com/ubi9 AS ubi-micro-build
-RUN mkdir -p /mnt/rootfs
-RUN dnf install --installroot /mnt/rootfs hostname curl --releasever 9 --setopt install_weak_deps=false --nodocs -y && \
-    dnf --installroot /mnt/rootfs clean all && \
-    rpm --root /mnt/rootfs -e --nodeps setup
-
 # Create keycloak image
 FROM ${KEYCLOAK_IMAGE}
-
-COPY --from=ubi-micro-build /mnt/rootfs /
 
 COPY --from=keycloak-builder /opt/keycloak/ /opt/keycloak/
 
@@ -38,7 +30,7 @@ COPY ./data-setup/src/main/bash/populate-data.sh /opt/keycloak
 USER root
 
 # hostname is needed for the testdata population script to work, because we need it to figure out the rest api url
-# RUN microdnf update -y && microdnf install hostname -y
+RUN microdnf update -y && microdnf install hostname -y
 
 RUN mkdir -p /app
 
