--- a/data-setup/pom.xml
+++ b/data-setup/pom.xml
@@ -36,10 +36,10 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-services</artifactId>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.jboss.spec.javax.ws.rs</groupId>
             <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
-        </dependency>
+        </dependency> -->
         <dependency>
             <!-- CLI parser -->
             <groupId>info.picocli</groupId>
@@ -49,6 +49,11 @@
             <groupId>hamburg.schwartau</groupId>
             <artifactId>keycloak-custom-protocol-mapper-example</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
     </dependencies>
 
