data setup for azure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       - DB_VENDOR=h2
       # if true, the code in ./data-setup is executed to initialize the realms etc.
       - POPULATE_TEST_DATA=true
+      # set oidc provider parameter from env var
+      - OIDC_PROVIDER_ALIAS=${OIDC_PROVIDER_ALIAS}
+      - OIDC_PROVIDER_CLIENT_ID=${OIDC_PROVIDER_CLIENT_ID}
+      - OIDC_PROVIDER_CLIENT_SECRET=${OIDC_PROVIDER_CLIENT_SECRET}
+      - OIDC_PROVIDER_AUTHORIZATION_URL=${OIDC_PROVIDER_AUTHORIZATION_URL}
+      - OIDC_PROVIDER_TOKEN_URL=${OIDC_PROVIDER_TOKEN_URL}
