--- a/protocol-mapper/pom.xml
+++ b/protocol-mapper/pom.xml
@@ -65,5 +65,17 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+    
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <!-- <scope>provided</scope> -->
+      </dependency>
+    
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <!-- <scope>provided</scope> -->
+      </dependency>
     </dependencies>
 </project>
